{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 127,
  "lineage": "0fe13942-8070-6cd9-42ca-97b61a49a255",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpn_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d7ea4b5fee319111",
            "arn": "arn:aws:ec2:ap-southeast-1:836628543332:elastic-ip/eipalloc-0d7ea4b5fee319111",
            "association_id": "eipassoc-042a69eb27d83c1be",
            "domain": "vpc",
            "id": "eipalloc-0d7ea4b5fee319111",
            "instance": "i-0c74c4d6a0043a01e",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0b5a4139a684e4382",
            "private_dns": "ip-10-0-1-133.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.133",
            "public_dns": "ec2-18-143-235-198.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.143.235.198",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.openvpn",
            "aws_security_group.openvpn_sg",
            "aws_subnet.vpn_subnet",
            "aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "openvpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a89e5734746d19eb",
            "arn": "arn:aws:ec2:ap-southeast-1:836628543332:instance/i-0c74c4d6a0043a01e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c74c4d6a0043a01e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "open-vpn",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b5a4139a684e4382",
            "private_dns": "ip-10-0-1-133.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.133",
            "public_ip": "52.221.179.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03d5558d41274f6c4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0917c14b7484ec5df",
            "tags": {
              "Name": "OpenVPN Access Server"
            },
            "tags_all": {
              "Name": "OpenVPN Access Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d49daf9efe138dc7"
            ]
          },
          "dependencies": [
            "aws_security_group.openvpn_sg",
            "aws_subnet.vpn_subnet",
            "aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpn_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:836628543332:internet-gateway/igw-06f2c7397dea7a5e0",
            "id": "igw-06f2c7397dea7a5e0",
            "owner_id": "836628543332",
            "tags": {
              "Name": "OpenVPN Internet Gateway"
            },
            "tags_all": {
              "Name": "OpenVPN Internet Gateway"
            },
            "vpc_id": "vpc-0eeb54505fdf8a012"
          },
          "dependencies": [
            "aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpn_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06f2c7397dea7a5e0",
            "id": "r-rtb-022b0a97feb1966381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-022b0a97feb196638",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpn_igw",
            "aws_route_table.vpn_route_table",
            "aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpn_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:836628543332:route-table/rtb-022b0a97feb196638",
            "id": "rtb-022b0a97feb196638",
            "owner_id": "836628543332",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06f2c7397dea7a5e0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "OpenVPN Route Table"
            },
            "tags_all": {
              "Name": "OpenVPN Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eeb54505fdf8a012"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpn_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e83a94eddd39fd6",
            "route_table_id": "rtb-022b0a97feb196638",
            "subnet_id": "subnet-0917c14b7484ec5df"
          },
          "dependencies": [
            "aws_route_table.vpn_route_table",
            "aws_subnet.vpn_subnet",
            "aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "openvpn_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:836628543332:security-group/sg-0d49daf9efe138dc7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d49daf9efe138dc7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 943,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 943
              }
            ],
            "name": "terraform-20241014085511872200000002",
            "name_prefix": "terraform-",
            "owner_id": "836628543332",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "OpenVPN SG"
            },
            "tags_all": {
              "Name": "OpenVPN SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eeb54505fdf8a012"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpn_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:836628543332:subnet/subnet-0917c14b7484ec5df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0917c14b7484ec5df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836628543332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "OpenVPN Subnet"
            },
            "tags_all": {
              "Name": "OpenVPN Subnet"
            },
            "vpc_id": "vpc-0eeb54505fdf8a012"
          },
          "dependencies": [
            "aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpn_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:836628543332:vpc/vpc-0eeb54505fdf8a012",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0da5ad1285c5ead1a",
            "default_route_table_id": "rtb-061d2510753555ead",
            "default_security_group_id": "sg-011dda6d5389bdbc9",
            "dhcp_options_id": "dopt-e7604d80",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eeb54505fdf8a012",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-061d2510753555ead",
            "owner_id": "836628543332",
            "tags": {
              "Name": "OpenVPN VPC"
            },
            "tags_all": {
              "Name": "OpenVPN VPC"
            }
          }
        }
      ]
    }
  ]
}